# task-toys

./: .gitignore  Cargo.toml  LICENSE  README.md
bat/: task-toys.bat
libs/task-toys-adapter/: Cargo.toml
libs/task-toys-domain/: Cargo.toml
libs/task-toys-infra/: Cargo.toml
libs/task-toys-usecase/: Cargo.toml
