[workspace]
members = ["bin/*", "libs/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
description = "A Swiss Army knife for my task by Rust"

[workspace.dependencies]
task-toys-infra = {path = "./libs/task-toys-infra" }
task-toys-adapter = {path = "./libs/task-toys-adapter" }
task-toys-usecase = {path = "./libs/task-toys-usecase" }
task-toys-domain = {path = "./libs/task-toys-domain" }

# cli
# clap = {version = "3.1.12", features = ["derive"]}

# general
# anyhow = "1.0.56"
# async-trait = "0.1.53"
# chrono = "0.4.19"
# derive-getters = "0.2.0"
# derive-new = "0.5.9"
# dotenv = "0.15.0"
# regex = "1.5.5"
# serde = "1.0.137"
# serde_derive = "1.0.137"
# serde_json = "1.0.81"
# tokio = { version = "1", features = ["full"] }
# tracing = "0.1.34"
# tracing-subscriber = {version = "0.3.11", features = ["time", "json"]}
